--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,9 @@ ul,ol {
   padding-left: 0;
   margin: 0;
 }
-  .container {
+  .navbar-container {
   max-width: 320px;
-position: fixed;
-  margin: 0 auto; 
+position: fixed; 
   background-color: #75d281;
 }
 
@@ -84,6 +83,10 @@ position: fixed;
   padding-right: 16px;
   padding-bottom: 0;
 }
+.navbar-close-icon,
+.navbar-logo-icon {
+  fill: #030A06;
+}
 .contacts-list {
   display: flex;
   flex-direction: column;
@@ -108,7 +111,32 @@ position: fixed;
 
 
 @media screen and (min-width: 768px) {
-  .container {
+  .navbar-container {
   max-width: 768px;
+  padding-bottom: 128px;
+}
+.navbar-nav {
+  padding-left: 32px;
+    padding-right: 32px;
+    margin-bottom: 0;
+}
+.navbar-address {
+  padding-left: 32px;
+    padding-right: 32px;
+}
+.navbar-logo {
+  position: absolute;
+  top: 14px;
+  left: 32px;
+}
+.navbar-close {
+  position: absolute;
+  top: 16px;
+  right: 24px;
+  border: none;
+  background-color: #75d281;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
