--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,81 @@
-
-ul,ol {
+ul,
+ol {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
 }
-  .navbar-container {
+.navbar-container {
   max-width: 320px;
-position: fixed; 
+  position: fixed;
   background-color: #75d281;
 }
 
-  .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #75d281;         
-       opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #75d281;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .navbar.is-open {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: auto;
-  }
-  .navbar-container {
-      position: relative;
-      padding-top: 64px;
-      padding-bottom: 92px;
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navbar.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.navbar-container {
+  position: relative;
+  padding-top: 64px;
+  padding-bottom: 92px;
 
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-  } 
-  .navbar-logo {
-      position: absolute;
-      top: 14px;
-      left: 20px;
-  }
-  .navbar-close {
-      position: absolute;
-      top: 16px;
-      right: 20px;
-      border: none;
-      background-color: #75d281;
-         cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-              border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .navbar-nav {
-      padding-top: 32px;
-      padding-bottom: 32px;
-      padding-left: 20px;
-      padding-right: 20px;
-      margin-bottom: 32px;
-  }
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.navbar-logo {
+  position: absolute;
+  top: 14px;
+  left: 20px;
+}
+.navbar-close {
+  position: absolute;
+  top: 16px;
+  right: 20px;
+  border: none;
+  background-color: #75d281;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navbar-nav {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 32px;
+}
 
 .navbar-nav-list {
   display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      flex-direction: column;
-      gap: 32px;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 32px;
 }
 .nav-link {
   text-decoration: none;
-      font-family: 'Fira Sans' , sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 160%;
   letter-spacing: 0em;
-  color: #030A06;
+  color: #030a06;
 }
 .navbar-address {
   padding-top: 32px;
@@ -83,60 +83,52 @@ position: fixed;
   padding-right: 16px;
   padding-bottom: 0;
 }
-.navbar-close-icon,
-.navbar-logo-icon {
-  fill: #030A06;
-}
+
 .contacts-list {
   display: flex;
   flex-direction: column;
   gap: 16px;
-
 }
 .contact-item {
-   list-style: none;
-   
+  list-style: none;
 }
 .contact-link {
   text-decoration: none;
-        font-family: 'Fira Sans' , sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 160%;
   letter-spacing: 0em;
-  color: #030A06;
-  
+  color: #030a06;
 }
-
-
 
 @media screen and (min-width: 768px) {
   .navbar-container {
-  max-width: 768px;
-  padding-bottom: 128px;
-}
-.navbar-nav {
-  padding-left: 32px;
+    max-width: 768px;
+    padding-bottom: 128px;
+  }
+  .navbar-nav {
+    padding-left: 32px;
     padding-right: 32px;
     margin-bottom: 0;
-}
-.navbar-address {
-  padding-left: 32px;
+  }
+  .navbar-address {
+    padding-left: 32px;
     padding-right: 32px;
-}
-.navbar-logo {
-  position: absolute;
-  top: 14px;
-  left: 32px;
-}
-.navbar-close {
-  position: absolute;
-  top: 16px;
-  right: 24px;
-  border: none;
-  background-color: #75d281;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
+  .navbar-logo {
+    position: absolute;
+    top: 14px;
+    left: 32px;
+  }
+  .navbar-close {
+    position: absolute;
+    top: 16px;
+    right: 24px;
+    border: none;
+    background-color: #75d281;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
